WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57080
Crash in debugger beneath MarkStack::drain @ me.com, ibm.com
https://bugs.webkit.org/show_bug.cgi?id=57080
Summary
Crash in debugger beneath MarkStack::drain @ me.com, ibm.com
Geoffrey Garen
Reported
2011-03-24 22:18:29 PDT
Crash in debugger beneath MarkStack::drain @ me.com, ibm.com
Attachments
Patch
(10.67 KB, patch)
2011-03-24 22:23 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-03-24 22:22:03 PDT
<
rdar://problem/8525907
>
Geoffrey Garen
Comment 2
2011-03-24 22:23:33 PDT
Created
attachment 86883
[details]
Patch
Geoffrey Garen
Comment 3
2011-03-25 12:44:59 PDT
Committed
r81983
: <
http://trac.webkit.org/changeset/81983
>
WebKit Review Bot
Comment 4
2011-03-25 13:06:05 PDT
http://trac.webkit.org/changeset/81983
might have broken Qt Windows 32-bit Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug